manifests/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-1
  name: nginx-1
  namespace: validate
spec:
  containers:
  - image: nginx
    name: nginx-1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
