manifests/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: validate
---
kind: Service
apiVersion: v1
metadata:
  name: validate
  namespace: validate
spec:
  selector:
    app: validate
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validation-webhook
  namespace: validate
  labels:
    app: validate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validate
  template:
    metadata:
      labels:
        app: validate
    spec:
      containers:
      - name: webhook
        image: simbu1290/k8s:validating-webhook-v1
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: certs-volume
          readOnly: true
          mountPath: "/certs"
        imagePullPolicy: Always
      volumes:
      - name: certs-volume
        secret:
          secretName: admission-tls
