manifests/mutate.yaml
---
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: mutating-webhook
webhooks:
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR6VENDQXJXZ0F3SUJBZ0lVTmcyVDJIL3NSbU5BeUpvNGsrbk43ZGRnc0tjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1pURUxNQWtHQTFVRUJoTUNRVlV4RXpBUkJnTlZCQWdNQ2xOdmJXVXRVM1JoZEdVeElUQWZCZ05WQkFvTQpHRWx1ZEdWeWJtVjBJRmRwWkdkcGRITWdVSFI1SUV4MFpERWVNQndHQTFVRUF3d1ZkbUZzYVdSaGRHVXVkbUZzCmFXUmhkR1V1YzNaak1CNFhEVEkxTURRek1EQTVORGd6TTFvWERUSTRNREl4T0RBNU5EZ3pNMW93WlRFTE1Ba0cKQTFVRUJoTUNRVlV4RXpBUkJnTlZCQWdNQ2xOdmJXVXRVM1JoZEdVeElUQWZCZ05WQkFvTUdFbHVkR1Z5Ym1WMApJRmRwWkdkcGRI [...]
      service:
        namespace: validate
        name: validate
        path: /mutate/pods
    failurePolicy: Fail
    name: validate.validate.svc
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    timeoutSeconds: 15
