manifests/validate.yaml
---
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: validating-webhook
webhooks:
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: ""
      service:
        namespace: validate
        name: validate
        path: /validate/pods
    failurePolicy: Fail
    name: validate.validate.svc
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    timeoutSeconds: 15
